change menu bar index

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                     <li>
                         <a href="#"><i class="fa fa-users"></i> <span class="nav-label">Crianças</span><span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level">
-                            <li><a href="#/criancas"><span>Crianças</span></a></li>
+                            <li><a href="#/criancas">Crianças</span></a></li>
                         </ul>
                     </li>
                 </ul>
