add input type profile image

--- a/index.html
+++ b/index.html
@@ -12,8 +12,13 @@
         <link href="font-awesome/css/font-awesome.css" rel="stylesheet">
 
         <link href="css/animate.css" rel="stylesheet">
-        <link href="css/style.css" rel="stylesheet">
 
+        <link href="css/plugins/dropzone/basic.css" rel="stylesheet">
+
+        <link href="css/plugins/dropzone/dropzone.css" rel="stylesheet">
+
+        <link href="css/style.css" rel="stylesheet">
+        
         <link href="css/plugins/iCheck/custom.css" rel="stylesheet">
 
         <link href="css/plugins/chosen/chosen.css" rel="stylesheet">
@@ -34,6 +39,7 @@
         <link href="css/plugins/ionRangeSlider/ion.rangeSlider.skinFlat.css" rel="stylesheet">
          <!-- Morris -->
         <link href="css/plugins/morris/morris-0.4.3.min.css" rel="stylesheet">
+        <link href="css/profile-img.css" rel="stylesheet">
 
         <script src="library/angular/angular.min.js"></script>
         <script src="library/angular/angular-route.min.js"></script>
@@ -94,7 +100,7 @@
 
         <script src="js/plugins/jquery-ui/jquery-ui.min.js"></script>
 
-       
+        <script src="js/plugins/dropzone/dropzone.js"></script>
 
     </head>
 
