--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
         <script src="services/fullCalendar.js"></script>
         <script src="services/funcoesServices.js"></script>
         <script src="services/urlServices.js"></script>
+        
+
+        <script src="backend/data/localidades.js"></script>
 
         <!-- <script src="library/jquery/jquery.1.9.min.js"></script>-->
         <!-- Mainly scripts -->
