changed bu Gilson

--- a/index.html
+++ b/index.html
@@ -41,9 +41,29 @@
         <link href="css/plugins/morris/morris-0.4.3.min.css" rel="stylesheet">
         <link href="css/profile-img.css" rel="stylesheet">
 
+        
+
         <script src="library/angular/angular.min.js"></script>
         <script src="library/angular/angular-route.min.js"></script>
         <script src="partials/app.js"></script>
+
+        <!-- fusion Charts library -->
+        <script src="library/fusioncharts/fusioncharts.js"></script>
+        <script src="library/fusioncharts/angular-fusioncharts.min.js"></script>
+
+        <!--<script src="library/fusioncharts/themes/black.js"></script>
+        <script src="library/fusioncharts/themes/chalk.js"></script>
+        <script src="library/fusioncharts/themes/dark.js"></script>
+        <script src="library/fusioncharts/themes/light.js"></script>
+        <script src="library/fusioncharts/themes/patterns.js"></script>-->
+
+        <script src="library/fusioncharts/themes/fusioncharts.theme.carbon.js"></script>
+        <script src="library/fusioncharts/themes/fusioncharts.theme.fint.js"></script>
+        <script src="library/fusioncharts/themes/fusioncharts.theme.ocean.js"></script>
+        <script src="library/fusioncharts/themes/fusioncharts.theme.zune.js"></script>
+        <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+
+
 
         <script src="partials/home/homeController.js"></script>
         <script src="partials/criancas/criancasController.js"></script>
